fix(site:BlogPost): Background color on dark mode

--- a/web/src/components/Common/BlogPost/BlogPost.module.scss
+++ b/web/src/components/Common/BlogPost/BlogPost.module.scss
@@ -2,7 +2,7 @@
 
 .Root {
   position: relative;
- background-color: $color-primary-grey-light;
+  background-color: $color-primary-grey-light;
   ul {
     list-style-position: inside;
     list-style: none;
@@ -39,7 +39,7 @@
   background-color: $color-primary-white;
   top: 0;
   padding: spacing(1) spacing(2) spacing(6);
-  border-radius: $radius-small  ;
+  border-radius: $radius-small;
   // box-shadow: 0px 0px 6px -1px rgba(0, 0, 0, 0.16);
   @include mq($breakpoint-desktop) {
     padding: spacing(3) spacing(5) spacing(6);
@@ -67,7 +67,6 @@
     padding: spacing(3) spacing(1) spacing(3);
   }
 }
-
 
 .HighlightedText {
   margin-bottom: spacing(3);
@@ -114,7 +113,6 @@
   }
 }
 
-
 @include mq($breakpoint-tablet) {
   .Container {
     padding: spacing(3) spacing(15) spacing(6);
@@ -133,6 +131,9 @@
 }
 
 .isDark {
+  &.Root {
+    background-color: $color-primary-black;
+  }
   .Container {
     color: $color-primary-white;
     background-color: $color-primary-black-light;
